# wcx_unimrcp

./: Makefile  config.status  configure  configure.ac  libtool
conf/: Makefile  Makefile.in
data/: Makefile
libs/: Makefile
libs/apr-toolkit/: Makefile
libs/apr-toolkit/src/.deps/: apt_log.Plo
libs/mpf/: Makefile
libs/mpf/src/: mpf_activity_detector.c
libs/mrcp/: Makefile
libs/mrcp-client/: Makefile
libs/mrcp-engine/: Makefile
libs/mrcp-server/: Makefile
libs/mrcp-signaling/: Makefile
libs/mrcpv2-transport/: Makefile
libs/uni-rtsp/: Makefile
modules/: Makefile
modules/mrcp-sofiasip/: Makefile
modules/mrcp-unirtsp/: Makefile
plugins/: Makefile  Makefile.am  Makefile.in
plugins/demo-recog/: Makefile
plugins/demo-synth/: Makefile
plugins/demo-verifier/: Makefile
plugins/mrcp-recorder/: Makefile
plugins/xz-recog/: Makefile  Makefile.am  Makefile.in
plugins/xz-recog/src/: xz_recog_engine.c
plugins/xz-recog/src/.deps/: demo_recog_engine.Plo  xz_recog_engine.Plo
plugins/xz-recog/src/base/: bd.sh  core.79464  test  xz_base64.c  xz_base64.h  xz_http.c  xz_http.h  xz_link.c  xz_link.h  xz_main.c  xz_recog.c  xz_recog.h  xz_speech.c  xz_speech.h  xz_tool.c  xz_tool.h  xz_types.h
plugins/xz-recog/src/base/.deps/: cJSON.Plo  xz_base64.Plo  xz_http.Plo  xz_link.Plo  xz_recog.Plo  xz_speech.Plo  xz_tool.Plo
plugins/xz-recog/src/base/voice_file/: iat_python3_demo.py  sample.pcm
tests/: Makefile
tests/apttest/: Makefile
tests/mpftest/: Makefile
tests/mrcptest/: Makefile
tests/rtsptest/: Makefile
tests/strtablegen/: Makefile
(+2 files in other folders)
